Updated changes to visuals

--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
             </nav>
             <div class="navButtons">
               <form action="index2.html">
-                <button class="fa-solid fa-table-cells pe-3 border-0 bg-white"></button>
+                <button class="fa-solid fa-table-cells pe-3 border-0 bg-white text-secondary"></button>
               </form>
               <form action="index.html">
-                <button class="fa-solid fa-square ps-3 border-0 bg-white"></button> 
+                <button class="fa-solid fa-square ps-3 border-0 bg-white text-primary"></button> 
               </form>
             </div>   
-            <div>
+            <div class="fading">
               <div class="card mx-auto" style="width: 40rem;">
                 <div class="card-body p-0">
                   <span>
